[package]
name = "helvar_cgi"
version = "0.1.0"
authors = ["ksb <ksb@fluffware.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes ="*"
tokio = {version = "0.2.21", features  = ["macros", "rt-core", "dns", "tcp", "io-util", "time","stream","uds","sync"]}
async-trait = "0.1.*"
serde_json = "1.0.*"